--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+<div class="top-container">
+    <h1>Nguyen Van Giang</h1>
+    <p>I am programmer</p>
+</div>
 
+<div class="middle-container">
+</div>
+
+<div class="bottom-container">
+</div>
 </body>
 </html>
